--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: ghtvec
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: ghtvec
   template:
     metadata:
       labels:
-        app: ray
+        app: ghtvec
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/ghtvec:latest
+        name: ghtvec
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "78121ffa-bf94-4b90-9a82-5b197e03e20f"
         - name: Vless_Path
-          value: "/vl555"
+          value: "/vl5df6r7555"
         - name: Vmess_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "78121ffa-bf94-4b90-9a82-5b197e03e20f"
         - name: Vmess_Path
-          value: "/vm666"
+          value: "/vm65767rtr666"
         - name: Share_Path
           value: "/v2link"
